13/10/2020 1. Firebase authentication with register is completed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">FirebaseAuth</string>
+    <string name="emailID">Enter Email ID</string>
+    <string name="password">Enter Password</string>
+    <string name="register">Register</string>
+    <string name="login">Registered User....? Login in here...</string>
 </resources>
